src/test/resources/integration-test/external/privates2.expect
100.0

An error occurred:
privates2.twl
Error at line 10 character 13.
Unknown identifier 'privateLet'.
