src/test/resources/integration-test/external/privates2.twl
import "privatesinc.twl"
import <io>

// ok
privatesinc.publicLet io.println

// bad
privatesinc.privateLet io.println